Feat: list env with alias
